add(composer): license

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "camunda/camunda-bpm-php-sdk",
   "description": "PHP SDK for camundaBPM process services",
+  "license": "Apache-2.0",
   "minimum-stability": "stable",
   "authors": [
     {
