--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
 
   "require": {
     "php": ">=5.3.0",
-    "phpunit/phpunit": "3.7.21"
+    "phpunit/phpunit": "~4.6.0"
   },
 
   "require-dev": {
-    "phpunit/phpunit": "3.7.21"
+    "phpunit/phpunit": "~4.6.0"
   },
 
   "archive": {
